objects/Astonous_SM__Shipment_Manifest__c.object
<CustomObject>
    <fields>
        <fullName>Astonous_SM__Pickup_Address__c</fullName>
        <label>Pickup Address</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Raw_Data__c</fullName>
        <label>Raw Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Response_ID__c</fullName>
        <label>Response ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Response_Message__c</fullName>
        <label>Response Message</label>
        <type>TextArea</type>
    </fields>
    <label>Shipment Manifest</label>
    <listViews>
        <fullName>Astonous_SM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Shipment Manifest  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Manifests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>